# aether

./: .gitignore  BENCHMARKS.md  BINDINGS_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DCO.md  DEVELOPMENT.md  LICENSE  LICENSE-APACHE  Learning.md  OPTIMIZATION_CHANGELOG.md  OPTIMIZATION_SUMMARY.md  P.md  QUICKSTART_BINDINGS.md  README.md  REPORT_FEATURE_SUMMARY.md  REPORT_MODULE_STATUS.md  aether库.md  build.rs  cbindgen.toml  fix_if.py
.claude/: settings.local.json
benches/: BENCHMARK_RESULTS.md  QUICKSTART.md  README.md  aether_benchmarks.rs  github-actions-example.yml
bindings/: README.md  aether.h
bindings/go/: README.md  aether.go  aether_test.go  go.mod
bindings/go/examples/: main.go
bindings/typescript/: README.md  package.json  tsconfig.json
docs/: BIGINT_GUIDE.md  CLASS_INTERFACE_DESIGN.md  DEBUG_GUIDE.md  ENGINE_MODES_GUIDE.md  ERROR_REPORTING.md  EXCEL_FORMULA_PLAN.md  FFI_ENHANCEMENT_PLAN.md  GO_MODULE_PUBLISHING_GUIDE.md  HELP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IO_GUIDE.md  IO_PERMISSIONS.md  IO_QUICKSTART.md  MODULE_SYSTEM_DESIGN.md  OPTIMIZATION_GUIDE.md  PAYROLL_GUIDE.md  PRECISION_GUIDE.md  PUBLISHING_GUIDE.md  REPORT_GUIDE.md  REPORT_IMPLEMENTATION_PLAN.md  REPORT_QUICKSTART.md  REPORT_SUMMARY.md  ROADMAP.md  SANDBOX_GUIDE.md  SELECTIVE_STDLIB_GUIDE.md  STAGE_3.2_SUMMARY.md  STDLIB_EXTENSION_SUMMARY.md  TAIL_RECURSION_GUIDE.md  USER_GUIDE.md
examples/: advanced_math.rs  async_demo.rs  basic_usage.rs  builtin_functions.rs  demo_help.aether  demo_io.rs  engine_modes.rs  eval_file_demo.rs  features_demo.aether  final_showcase.aether  lambda_syntax_demo.aether  language_improvements_test.aether  new_features_demo.aether  new_features_showcase.aether  optimization_demo.rs  payroll_demo.aether  precision_complete.aether  precision_demo.aether  precision_simple.aether  report_demo.aether  stats_demo.aether  structured_trace.rs  structured_trace_demo.aether  test_permissions.rs
examples/module_import/: main.aether  math.aether
scripts/: bench-summary.sh  bench.sh  build-all.sh  publish.sh  test-all.sh
src/: ast.rs  cache.rs  environment.rs  evaluator.rs  ffi.rs  lexer.rs  lib.rs  main.rs  module_system.rs  optimizer.rs  parser.rs  prelude.rs  stdlib copy.rs  stdlib.rs  token.rs  value.rs  wasm.rs
src/api/: cache.rs  constructors.rs  eval.rs  limits.rs  mod.rs  stdlib.rs  trace.rs
src/builtins/: array.rs  dict.rs  filesystem.rs  help.rs  io.rs  json.rs  math.rs  mod.rs  network.rs  precise.rs  report.rs  string.rs  trace.rs  types.rs
src/builtins/payroll/: basic.rs  (+10 more)
src/cli/: args.rs  debugger.rs  error_context.rs  file_cmd.rs  help.rs  metrics.rs  mod.rs  repl.rs  runner.rs
src/debugger/: breakpoint.rs  mod.rs  session.rs  state.rs
src/engine/: global.rs  mod.rs  pool.rs  scoped.rs
src/pytranspile/: diagnostics.rs  emitter.rs  ir.rs  mod.rs  options.rs  python.rs
src/runtime/: limits.rs  mod.rs  trace.rs
src/sandbox/: config.rs  context.rs  metrics.rs  mod.rs  module_cache.rs  path_validator.rs
stdlib/: PACKAGING.md  README.md  array_utils.aether  cli_utils.aether  csv.aether  datetime.aether  functional.aether  heap.aether  json.aether  queue.aether  regex_utils.aether  set.aether  sorting.aether  stack.aether  string_utils.aether  testing.aether  text_template.aether  validation.aether
stdlib/examples/: array_demo.aether  cli_utils_demo.aether  cli_utils_simple_test.aether  csv_demo.aether  data_structures_demo.aether  datetime_demo.aether  functional_demo.aether  heap_demo.aether  higher_order_demo.aether  higher_order_test.aether  json_demo.aether  new_modules_test.aether  queue_demo.aether  quick_test.aether  regex_utils_demo.aether  set_demo.aether  sorting_demo.aether  stack_demo.aether  stdlib_test.aether  string_demo.aether  testing_demo.aether  text_template_demo.aether  validation_demo.aether
tests/: ast_tests.rs  bigint_tests.rs  builtins_tests.rs  cache_tests.rs  call_stack_tests.rs  env_tests.rs  error_report_tests.rs  eval_file_tests.rs  evaluator_tests.rs  execution_limits_tests.rs  ffi_tests.rs  host_injection_scope_tests.rs  lexer_tests.rs  lib_tests.rs  math_advanced_tests.rs  math_stats_tests.rs  module_system_tests.rs  new_features_tests.rs  optimizer_tests.rs  parse_tests.rs  pytranspile_list_dict_tests.rs  sandbox_tests.rs  selective_stdlib_tests.rs  stdlib_integration_tests.rs  stdlib_tests.rs  structured_trace_tests.rs  tail_recursion_tests.rs  test_io.sh  token_tests.rs  trace_api_tests.rs  value_tests.rs
(+2 files in other folders)
