[package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["xiaozuhui<xiaozuhui@outlook.com>"]
description = "一个简单小型的DSL语言解释器"
license = "Apache-2.0"
repository = "https://github.com/yourusername/aether"
keywords = ["dsl", "interpreter", "scripting"]

[lib]
name = "aether"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
num-rational = "0.4"
num-traits = "0.2"
num-bigint = "0.4"
ureq = "2.10"

# 报表生成依赖
calamine = "0.24"        # Excel 读取
rust_xlsxwriter = "0.68" # Excel 写入
chrono = "0.4"           # 日期时间格式化
lazy_static = "1.4"      # 全局句柄存储

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "aether_benchmarks"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[build-dependencies]
cbindgen = "0.29.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
