[package]
name = "aether-azathoth"
version = "0.4.2"
edition = "2024"
authors = ["xiaozuhui <xiaozuhui@outlook.com>"]
description = "A lightweight, embeddable domain-specific language (DSL) interpreter with rich standard library"
license = "Apache-2.0"
repository = "https://github.com/xiaozuhui/aether"
documentation = "https://docs.rs/aether"
homepage = "https://github.com/xiaozuhui/aether"
readme = "README.md"
keywords = ["dsl", "interpreter", "scripting", "embedded", "language"]
categories = ["parser-implementations", "development-tools", "embedded"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "benches/*",
    "examples/*.aether",
    "docs/*",
]

[lib]
name = "aether"
crate-type = ["cdylib", "rlib", "staticlib"]
doctest = false

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
num-rational = "0.4"
num-traits = "0.2"
num-bigint = "0.4"
ureq = "3.1.4"
serde_json = "1.0.148"

# Python transpilation (optional)
pyo3 = { version = "0.27.2", features = ["auto-initialize"], optional = true }

# 报表生成依赖
calamine = "0.32.0"        # Excel 读取
rust_xlsxwriter = "0.92.2" # Excel 写入
chrono = "0.4"             # 日期时间格式化
lazy_static = "1.4"        # 全局句柄存储和单例模式

# 引擎池依赖
crossbeam = "0.8" # 无锁队列，用于引擎池

# 异步支持（可选）
tokio = { version = "1.49.0", features = ["rt", "sync"], optional = true }

[features]
default = ["pytranspile"]
async = ["tokio"]
pytranspile = ["dep:pyo3"]

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tokio = { version = "1.49.0", features = ["full"] }

[[example]]
name = "async_demo"
required-features = ["async"]

[[bench]]
name = "aether_benchmarks"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
console_error_panic_hook = "0.1"

[build-dependencies]
cbindgen = "0.29.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
